[리팩토링] Project Controller,Service,Repository 리팩토링 및 예외 처리 구현